--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,3 +47,7 @@
 @import "modules/card";
 @import "modules/card-registration";
 //------------------------------
+
+// 商品一覧------------------------
+@import "modules/items";
+// -------------------------------
