--- a/app/views/posts/_post__detail.html.haml
+++ b/app/views/posts/_post__detail.html.haml
@@ -41,12 +41,15 @@
               = link_to "カードを登録して下さい", cards_path
         .post__detail__inner__top__item__change
           - if user_signed_in? && current_user.id == @post.user_id
-            .post__detail__inner__top__item__change__edit
-              = link_to edit_post_path(@post) do
-                商品の編集
-            .post__detail__inner__top__item__change__delete
-              = link_to post_path(@post), method: :delete do
-                この商品を削除する
+            - if @post.purchased == true
+              商品売却済みなので編集・削除ができません
+            - else
+              .post__detail__inner__top__item__change__edit
+                = link_to edit_post_path(@post) do
+                  商品の編集
+              .post__detail__inner__top__item__change__delete
+                = link_to post_path(@post), method: :delete do
+                  この商品を削除する
         .post__detail__inner__top__item__introduce
           = @post.introduce
         .post__detail__inner__top__item__table
