--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -5,11 +5,13 @@
   padding: 35px;
   background-color: white;
 }
-.show-header{
+
+.show-header {
   padding: 0 60px;
   position: relative;
   border-top: 1px solid #eee;
-  &__contents{
+
+  &__contents {
     font-size: 14px;
     max-width: 1040px;
     width: 100%;
@@ -18,28 +20,34 @@
     padding: 15px 0 0;
   }
 }
-.show-main{
+
+.show-main {
   background: #f5f5f5;
   width: 100%;
   position: absolute;
   padding: 40px 0 0 0;
-  &__contents{
+
+  &__contents {
     width: 1020px;
     height: 1301px;
     margin: 0 auto;
-    &__right{
+
+    &__right {
       float: right;
       width: 700px;
-      &__top{
+
+      &__top {
         height: 200px;
         width: 700px;
         background-image: image-url("seen.jpg");
-        &__contents{
+
+        &__contents {
           height: 160px;
           width: 660px;
           padding: 30px 20px 20px 20px;
         }
-        &__icon{
+
+        &__icon {
           height: 60px;
           width: 60px;
           border-radius: 50%;
@@ -47,63 +55,75 @@
           background-position: 60% 40%;
           margin: 0 auto;
         }
-        &__contents--name{
+
+        &__contents--name {
           height: 30px;
           text-align: center;
           margin: 0 auto;
           margin-top: 8px;
         }
-          &__evaluation{
-            float: right;
-            margin-right: 41%;
-            margin-top: 8px;
-          }
-          &__goods{
-            float: left;
-            margin-left: 39%;
-            margin-top: 8px;
-          }
+
+        &__evaluation {
+          float: right;
+          margin-right: 41%;
+          margin-top: 8px;
+        }
+
+        &__goods {
+          float: left;
+          margin-left: 39%;
+          margin-top: 8px;
+        }
       }
+
       .tab-first {
         margin-top: 50px;
         background-color: white;
         width: 100%;
         margin: 0 auto;
+
         .contains {
           width: 700px;
           background: #cccccc;
         }
+
         ul {
           &.menu {
             li {
-              display: inline-block;
+              // display: inline-block;
               width: calc(100%/2);
-              height: 226px;
+              // height: 226px;
               line-height: 72px;
               text-align: center;
               display: block;
               float: left;
               font-weight: bold;
               transition: all 0.2s ease;
+
               .menu_item {
-                display: inline-block;
+                // display: inline-block;
+                display: block;
                 background-color: #cccccc;
                 color: black;
                 width: 280px;
                 padding: 0px 35px 0px 35px;
               }
+
               .active {
                 @include active_show();
               }
+
               .move {
                 @include active_show();
               }
+
               :not(.active):hover {
-                opacity: 0.5;
-                transition: .8s;
+                // opacity: 0.5;
+                // transition: .8s;
               }
             }
           }
+
           &.contents li {
             list-style: none;
             font-size: 14px;
@@ -112,6 +132,7 @@
             background: white;
             color: black;
             display: none;
+
             &.show {
               display: block;
               text-align: center;
@@ -122,51 +143,92 @@
           }
         }
       }
-    &__container{
-      height: 382px;
-      width: 700px;
-      margin-top: 40px;
-      background-color: white;
-      &__title{
-        height: 72px;
-        padding: 0 16px;
-        font-weight: bold;
-        line-height: 72px;
+
+      &__container {
+        // height: 382px;
+        height: 100%;
+        width: 700px;
+        margin-top: 40px;
+        background-color: white;
+
+        &__title {
+          height: 72px;
+          padding: 0 16px;
+          font-weight: bold;
+          line-height: 72px;
+        }
       }
     }
-    }
-    &__left{
+
+    &__left {
       width: 280px;
-      height:100%;
+      height: 100%;
       margin-right: 40px;
       float: left;
-      &--list{
-          li{
-            background-color: #fff;
-            border-top: 1px solid #eee;
-            padding: 14px;
-            font-size: 14px;
+
+      &--list {
+        li {
+          background-color: #fff;
+          border-top: 1px solid #eee;
+          padding: 14px;
+          font-size: 14px;
+          color: #333;
+
+          a {
             color: #333;
-            a{
-              color: #333;
-              text-decoration: none;
-              position: relative;
-              i{
-                position: absolute;
-                top: 11%;
-                left: 240px;
-              }
-            } 
+            text-decoration: none;
+            position: relative;
+
+            i {
+              position: absolute;
+              top: 11%;
+              left: 240px;
+            }
           }
-          li:hover{
-            background-color: #f7f6f5;
-          }
+        }
+
+        li:hover {
+          background-color: #f7f6f5;
+        }
       }
-      h3{
+
+      h3 {
         font-size: 16px;
         margin: 40px 0 0;
         font-weight: bold;
       }
     }
   }
+}
+
+.transaction {
+  color: #333;
+  height: 70px;
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid #cccccc;
+  text-decoration: none;
+
+  &--left {
+    height: 70px;
+    width: 70px;
+  }
+
+  &__right {
+    width: 100%;
+
+    &--name {
+      text-align: left;
+    }
+
+    &--link {
+      text-align: right;
+      line-height: 70px;
+    }
+  }
+
+}
+
+.height72 {
+  height: 72px;
 }
