--- a/app/views/transaction_rooms/show.html.haml
+++ b/app/views/transaction_rooms/show.html.haml
@@ -17,6 +17,15 @@ transactioin_show
   = form.hidden_field :transaction_room_id, value: @room.id
   = form.submit
 
+- if @transaction.review == "good"
+  良いw
+- else
+  悪いn
+
 - if @transaction.acceptance == false
-  = form_tag({ :controller => 'transactions', :action => 'acceptance'}, local: true, data: { confirm: '商品を受け取りましたか？ 一度受け取ると取り消せません' }) do
-    %button
+  = form_with(controller: 'transactions', action: 'acceptance', local: true, data: { confirm: '商品を受け取りましたか？ 一度受け取ると取り消せません' }) do |f|
+    = f.label "良い", for: "review_good"
+    = f.radio_button :review, :good, checked: true
+    = f.label "悪い", for: "review_bad"
+    = f.radio_button :review, :bad
+    = f.submit
