add: ポップアップ形式でカテゴリーを表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 
 // トップ----------------------
 @import "modules/top__header";
+@import "modules/header__category";
 @import "modules/top__contents";
 @import "modules/top__main";
 @import "modules/top__banner";
