fix: 親カテゴリーのリンクを全体に適用

--- a/app/assets/stylesheets/modules/_header__category.scss
+++ b/app/assets/stylesheets/modules/_header__category.scss
@@ -12,19 +12,22 @@
     display: none;
     z-index: 100;
     position: absolute;
-    background: blue;
+    // background: blue;
   }
 
 }
 
 .parent {
-  width: 200px;
-  display: block;
-  // 下記を付けると子と孫が相対位置固定になる
-  // position: relative;
-  line-height: 44px;
-  background: #fff;
-  padding-left: 5px;
+  &-link {
+    width: 200px;
+    display: block;
+    // 下記を付けると子と孫が相対位置固定になる
+    // position: relative;
+    height: 44px;
+    line-height: 44px;
+    background: #fff;
+    padding-left: 5px;
+  }
 
   &-hover {
     background-color: rgb(234, 53, 45);
@@ -43,6 +46,7 @@
     width: 200px;
     display: block;
     background: #fff;
+    height: 30px;
     line-height: 30px;
 
     &:hover {
