--- a/app/views/posts/_top__header.html.haml
+++ b/app/views/posts/_top__header.html.haml
@@ -16,22 +16,27 @@
           =link_to "#", class: "h-category-top" do
             %h2 カテゴリーから探す
           %ul.h-category__modal
-            - @parents.each do |parent|
-              %li.parent
-                =link_to '#', class: "parent-link" do
-                  = parent.name
-                %ul.child-wrap
-                  - parent.children.each do |children|
-                    %li.child
-                      =link_to '##' do
-                        %span
-                          = children.name
-                      %ul.grand-child-wrap
-                        - children.children.each do |grandchild|
-                          %li.grand-child
-                            =link_to '###' do
-                              %span
-                                = grandchild.name
+            -#  下記renderするバージョン。なぜかこっちの方が読み込み遅い
+            -# = render partial: "categories/parent", collection: @parents
+            = render partial: "categories/parent", collection: @parents, as: "parent"
+
+            -# 下記renderしないでeachするバージョン。こっちの方が読み込み早い謎現象
+            -# - @parents.each do |parent|
+            -#   %li.parent
+            -#     =link_to '#', class: "parent-link" do
+            -#       = parent.name
+            -#     %ul.child-wrap
+            -#       - parent.children.each do |children|
+            -#         %li.child
+            -#           =link_to '##' do
+            -#             %span
+            -#               = children.name
+            -#           %ul.grand-child-wrap
+            -#             - children.children.each do |grandchild|
+            -#               %li.grand-child
+            -#                 =link_to '###' do
+            -#                   %span
+            -#                     = grandchild.name
 
         %li.top__header__inner__nav__left__brand
           =link_to "#" do
