style: やっぱりrenderの方がかっこいいからrenderにします

--- a/app/views/categories/_children.html.haml
+++ b/app/views/categories/_children.html.haml
@@ -1,7 +1,6 @@
 %li.child
-  =link_to '##' do
-    %span
-      = children.name
+  =link_to '##', class: "child-link" do
+    = children.name
   %ul.grand-child-wrap
     -# = render partial: "categories/grandchild", collection: children.children
     = render partial: "categories/grandchild", collection: children.children, as: "grandchild"
