--- a/app/assets/stylesheets/modules/_header__category.scss
+++ b/app/assets/stylesheets/modules/_header__category.scss
@@ -12,7 +12,7 @@
     display: none;
     z-index: 100;
     position: absolute;
-    // background: blue;
+    margin-top: 6px;
   }
 
 }
@@ -28,7 +28,6 @@
     line-height: 44px;
     background: #fff;
     padding-left: 5px;
-
   }
 
   &-hover {
@@ -44,22 +43,19 @@
   left: 200px;
   bottom: 0;
 
-  .child {
+  .child-link {
     width: 200px;
     display: block;
     background: #fff;
     height: 30px;
     line-height: 30px;
+    padding-left: 5px;
+    text-decoration: none;
 
     &:hover {
       background-color: rgb(239, 239, 239);
     }
 
-    span {
-      padding-left: 5px;
-      text-decoration: none;
-      color: #333;
-    }
   }
 }
 
@@ -72,13 +68,7 @@
   background: #fff;
 
   .grand-child {
-    background: #fff;
     width: 300px;
-    z-index: 100;
-
-    &:hover {
-      background-color: rgb(239, 239, 239);
-    }
 
   }
 }
