add: category_showを追加

--- a/app/views/posts/_top__header.html.haml
+++ b/app/views/posts/_top__header.html.haml
@@ -17,24 +17,24 @@
             %h2 カテゴリーから探す
           %ul.h-category__modal
             -#  下記renderするバージョン。なぜかこっちの方が読み込み遅い
-            -# = render partial: "categories/parent", collection: @parents
+            = render partial: "categories/parent", collection: @parents
             -# = render partial: "categories/parent", collection: @parents, as: "parent"
 
             -# 下記renderしないでeachするバージョン。こっちの方が読み込み早い謎現象
-            - @parents.each do |parent|
-              %li.parent
-                =link_to '#', class: "parent-link" do
-                  = parent.name
-                %ul.child-wrap
-                  - parent.children.each do |children|
-                    %li.child
-                      =link_to '##', class: "child-link" do
-                        = children.name
-                      %ul.grand-child-wrap
-                        - children.children.each do |grandchild|
-                          %li.grand-child
-                            =link_to '###', class: 'child-link grand-child' do
-                              = grandchild.name
+            -# - @parents.each do |parent|
+            -#   %li.parent
+            -#     =link_to category_path(parent.id) , class: "parent-link" do
+            -#       = parent.name
+            -#     %ul.child-wrap
+            -#       - parent.children.each do |children|
+            -#         %li.child
+            -#           =link_to category_path(children.id), class: "child-link" do
+            -#             = children.name
+            -#           %ul.grand-child-wrap
+            -#             - children.children.each do |grandchild|
+            -#               %li.grand-child
+            -#                 =link_to category_path(grandchild.id), class: 'child-link grand-child' do
+            -#                   = grandchild.name
 
         %li.top__header__inner__nav__left__brand
           =link_to "#" do
