--- a/app/views/categories/_grandchild.html.haml
+++ b/app/views/categories/_grandchild.html.haml
@@ -1,3 +1,3 @@
 %li.grand-child
-  =link_to '###', class: 'child-link grand-child' do
+  =link_to category_path(grandchild.id), class: 'child-link grand-child' do
     = grandchild.name
