add: カテゴリー一覧のマークアップ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,7 @@
 // 商品一覧------------------------
 @import "modules/items";
 // -------------------------------
+
+// カテゴリー一覧------------------------
+@import "modules/category-index";
+// -------------------------------
