--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,3 +2,5 @@ $bgc-gray: #f5f5f5;
 $light_dark: #333;
 $light_gray: #888;
 $light_blue: #2CCCD1;
+$red: rgb(234, 53, 45);
+$bootstrap_blue: rgb(0, 149, 238);
