--- a/app/views/posts/_post__detail.html.haml
+++ b/app/views/posts/_post__detail.html.haml
@@ -38,7 +38,7 @@
                   =link_to buy_post_path do
                     購入画面へ進む
             - else
-              = link_to "カードを登録して下さい", cards_path
+              = link_to "カードを登録して下さい", new_card_path
         .post__detail__inner__top__item__change
           - if user_signed_in? && current_user.id == @post.user_id
             - if @post.purchased == true
