--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,3 +51,7 @@
 // 商品一覧------------------------
 @import "modules/items";
 // -------------------------------
+
+// ブランド一覧------------------------
+@import "modules/post_brand";
+// -------------------------------
