--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -39,6 +39,13 @@
       必須
     -# #status
     = form.select :status, Post.statuses.keys, { include_blank: "---"}, class: "post-new__field--input"
+  .post-new__field
+    = form.fields_for :post_brand do |brand|
+      %label 
+        ブランド
+      %span.form-require
+        任意
+      = brand.text_field :name, class: "post-new__field--input", placeholder: "ブランド名", required: "require"
 -# 配送関係-------------------------------------------------------------------------------------
 .post-new__section
   .post-new__section--title
