--- a/app/views/posts/_post__detail.html.haml
+++ b/app/views/posts/_post__detail.html.haml
@@ -69,9 +69,7 @@
             %tr
               %th ブランド
               %td
-            %tr
-              %th 商品のサイズ
-              %td
+                = @post_brands.name
             %tr
               %th 商品の状態
               %td
