--- a/app/views/posts/_top__header.html.haml
+++ b/app/views/posts/_top__header.html.haml
@@ -14,9 +14,11 @@
         %li.top__header__inner__nav__left__category
           =link_to "#" do
             カテゴリー
-        %li.top__header__inner__nav__left__brand
-          =link_to "#" do
+        %li.top__header__inner__nav__left__brand 
+          =link_to post_brands_path do
             ブランド
+          -# = link_to "#", post_brands_path 
+            -# ブランド
       - if user_signed_in?
         .top__header__inner__nav__right
           %li.top__header__inner__nav__right__new
