--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,4 +55,6 @@
 
 // カテゴリー一覧------------------------
 @import "modules/category-index";
+// ブランド一覧------------------------
+@import "modules/post_brand";
 // -------------------------------
