--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -40,12 +40,12 @@
     -# #status
     = form.select :status, Post.statuses.keys, { include_blank: "---"}, class: "post-new__field--input"
   .post-new__field
-    = form.fields_for :post_brand do |brand|
+    = form.fields_for :post_brands do |brand|
       %label 
         ブランド
       %span.form-require
         任意
-      = brand.text_field :name, class: "post-new__field--input", placeholder: "ブランド名", required: "require"
+      = brand.text_field :name, class: "post-new__field--input", placeholder: "ブランド名"
 -# 配送関係-------------------------------------------------------------------------------------
 .post-new__section
   .post-new__section--title
