pullしてきたやつ

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -40,8 +40,8 @@
     -# #status
     = form.select :status, Post.statuses.keys, { include_blank: "---"}, class: "post-new__field--input"
   .post-new__field
-    = form.fields_for :post_brand do |brand|
-      %label 
+    = form.fields_for :post_brands do |brand|
+      %label
         ブランド
       %span.form-require
         任意
